Improved performance to 14 seconds (-6 seconds) (#3)
improved performance to 14 seconds